--- a/app/src/main/res/layout/item_sort_pic.xml
+++ b/app/src/main/res/layout/item_sort_pic.xml
@@ -8,8 +8,8 @@
     card_view:cardCornerRadius="5dp">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:padding="2dp">
 
         <ImageView
