--- a/app/src/main/res/layout/item_app_new_goods.xml
+++ b/app/src/main/res/layout/item_app_new_goods.xml
@@ -7,25 +7,32 @@
     >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:layout_marginTop="2dp"
+        android:padding="5dp"
         android:background="@color/white"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         >
-        <ImageView
-            android:id="@+id/ivThumb"
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:src="@drawable/baidu_safe"
             android:layout_weight="1"
-            />
+            android:gravity="center"
+            >
+            <ImageView
+                android:id="@+id/ivThumb"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:src="@drawable/baidu_safe"
+                />
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_toRightOf="@id/ivThumb"
             android:orientation="vertical"
-            android:layout_weight="3.5"
-            android:padding="8sp"
+            android:layout_weight="4"
             >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -81,6 +88,7 @@
                 android:layout_weight="1"
                 android:numColumns="5"
                 android:text="一分钟申请，最高额度10万"
+                android:gravity="center"
                 />
             <TextView
                 android:id="@+id/tv_appIntro"
