--- a/app/src/main/res/layout/activity_personal.xml
+++ b/app/src/main/res/layout/activity_personal.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="8dp"
+        android:layout_marginTop="@dimen/margin_top_10"
+        android:background="@color/white"
         >
         <RelativeLayout
             android:layout_width="0dp"
@@ -41,6 +43,7 @@
                 android:gravity="center"
                 android:layout_marginStart="@dimen/margin_left_10"
                 android:layout_marginEnd="@dimen/margin_right_10"
+                android:cursorVisible="false"
                 />
             <ImageView
                 android:layout_width="wrap_content"
@@ -56,6 +59,8 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="6dp"
+        android:layout_marginTop="@dimen/margin_top_10"
+        android:background="@color/white"
         >
         <RelativeLayout
             android:layout_width="0dp"
@@ -92,6 +97,9 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="6dp"
+        android:layout_marginTop="@dimen/margin_top_10"
+        android:background="@color/white"
+        android:onClick="onUpdate"
         >
         <RelativeLayout
             android:layout_width="0dp"
@@ -111,7 +119,7 @@
             android:layout_weight="4"
             android:gravity="center_vertical"
             >
-            <EditText
+            <TextView
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
@@ -134,6 +142,9 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="6dp"
+        android:layout_marginTop="@dimen/margin_top_10"
+        android:background="@color/white"
+        android:onClick="onUpdate"
         >
         <RelativeLayout
             android:layout_width="0dp"
