--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="padding_3">3dp</dimen>
     <dimen name="margin_left_10">10dp</dimen>
     <dimen name="margin_right_10">10dp</dimen>
+    <dimen name="margin_top_10">10dp</dimen>
 </resources>
